--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/generall%20styles%20and%20var.css">
     <link rel="stylesheet" href="css/header%20and%20section%201.css">
     <link rel="stylesheet" href="css/section%202.css">
+    
 </head>
 <body>
     <header class="header">
@@ -52,6 +53,33 @@
             <h3 class="card__title">10000+</h3>
             <p class="card__text">added posts daily</p>
         </div>
+    </div>
+</section>
+<section class="section__3">
+    <div class="section__3__container">
+        <article class="article__white">
+            <div class="article__wrap">
+                <h2>Be always first</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="diamond"></div>
+        </article>
+        <article class="article__white">
+            <div class="circle"></div>
+            <div class="article__wrap">
+                <h2>Your shop is where you are!</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+        </article>
+        <article class="article__transparent">
+            <div class="article__wrap">
+                <h2>Your shop is where you are!</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="block">
+                <img src="Assets/Trumpet.png" alt="trumpet drawing">
+            </div>
+        </article>
     </div>
 </section>
 </body>
