half of section 3

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="css/generall%20styles%20and%20var.css">
     <link rel="stylesheet" href="css/header%20and%20section%201.css">
     <link rel="stylesheet" href="css/section%202.css">
-    
+    <link rel="stylesheet" href="css/section%203.css">
+
 </head>
 <body>
     <header class="header">
@@ -29,58 +30,70 @@
             </nav>
         </div>
     </header>
+
+    <!-- SECTION 1 MAIN-->
+
     <section class="section__main">
         <h1 class="main__title">Sell More!!</h1>
         <p>Open shop on our platform and increase your sales</p>
         <a href="" class="main_button">Open your shop</a>
         <img src="Assets/Background.png" alt="" class="main__photo">
     </section>
-<section class="section__2">
-    <h2>The most popular sales platform in country</h2>
-    <div class="cards__wrapper">
-        <div class="card">
-            <div class="circle left"></div>
-            <h3 class="card__title">100000+</h3>
-            <p class="card__text">daily entries</p>
+
+    <!-- SECTION 2-->
+
+    <section class="section__2">
+        <h2>The most popular sales platform in country</h2>
+        <div class="cards__wrapper">
+            <div class="card">
+                <div class="circle left"></div>
+                <h3 class="card__title">100000+</h3>
+                <p class="card__text">daily entries</p>
+            </div>
+            <div class="card">
+                <div class="circle center"></div>
+                <h3 class="card__title">2000000+</h3>
+                <p class="card__text">seen products every day</p>
+            </div>
+            <div class="card">
+                <div class="circle right"></div>
+                <h3 class="card__title">10000+</h3>
+                <p class="card__text">added posts daily</p>
+            </div>
         </div>
-        <div class="card">
-            <div class="circle center"></div>
-            <h3 class="card__title">2000000+</h3>
-            <p class="card__text">seen products every day</p>
+    </section>
+
+       <!-- SECTION 3-->
+
+    <section class="section__3">
+        <div class="section__3__container">
+            <article class="article white">
+                <div class="article__wrap">
+                    <h2 class="one&two">Be always first</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </div>
+                <div class="diamond"></div>
+            </article>
+            <article class="article white">
+                <div class="circle"></div>
+                <div class="article__wrap">
+                    <h2 class="one&two">Your shop is where you are!</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </div>
+            </article>
+            <article class="article transparent">
+                <div class="article__wrap">
+                    <h2 class="three">Your shop is where you are!</h2>
+                    <p class="different">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </div>
+                <div class="block">
+                    <img src="Assets/Trumpet.png" alt="trumpet drawing">
+                </div>
+            </article>
         </div>
-        <div class="card">
-            <div class="circle right"></div>
-            <h3 class="card__title">10000+</h3>
-            <p class="card__text">added posts daily</p>
-        </div>
-    </div>
-</section>
-<section class="section__3">
-    <div class="section__3__container">
-        <article class="article__white">
-            <div class="article__wrap">
-                <h2>Be always first</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            </div>
-            <div class="diamond"></div>
-        </article>
-        <article class="article__white">
-            <div class="circle"></div>
-            <div class="article__wrap">
-                <h2>Your shop is where you are!</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            </div>
-        </article>
-        <article class="article__transparent">
-            <div class="article__wrap">
-                <h2>Your shop is where you are!</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            </div>
-            <div class="block">
-                <img src="Assets/Trumpet.png" alt="trumpet drawing">
-            </div>
-        </article>
-    </div>
-</section>
+    </section>
+
+    <!-- SECTION 4-->
+
 </body>
 </html>
