section 3 first article

--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
 
     <section class="section__3">
         <div class="section__3__container">
-            <article class="article white">
+            <article class="article white one">
                 <div class="article__wrap">
                     <h2 class="one&two">Be always first</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <div class="line"></div>
                 </div>
                 <div class="diamond"></div>
+                <img src="Assets/Macbook2.png" alt="">
             </article>
             <article class="article white">
                 <div class="circle"></div>
