section 3 second article

--- a/index.html
+++ b/index.html
@@ -74,19 +74,22 @@
                     <div class="line"></div>
                 </div>
                 <div class="diamond"></div>
-                <img src="Assets/Macbook2.png" alt="">
+                <img src="Assets/Macbook2.png" alt="Macbook picture">
             </article>
-            <article class="article white">
+            <article class="article white two">
                 <div class="circle"></div>
+                <img src="Assets/iPhone2.png" alt="iPhone picture">
                 <div class="article__wrap">
                     <h2 class="one&two">Your shop is where you are!</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <div class="line"></div>
                 </div>
             </article>
-            <article class="article transparent">
+            <article class="article transparent three">
                 <div class="article__wrap">
                     <h2 class="three">Your shop is where you are!</h2>
                     <p class="different">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <div class="line"></div>
                 </div>
                 <div class="block">
                     <img src="Assets/Trumpet.png" alt="trumpet drawing">
