--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="section__3">
         <div class="section__3__container">
             <article class="article white one">
-                <div class="article__wrap">
+                <div class="article__wrap one">
                     <h2 class="one&two">Be always first</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                     <div class="line"></div>
@@ -79,14 +79,14 @@
             <article class="article white two">
                 <div class="circle"></div>
                 <img src="Assets/iPhone2.png" alt="iPhone picture">
-                <div class="article__wrap">
+                <div class="article__wrap two">
                     <h2 class="one&two">Your shop is where you are!</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                     <div class="line"></div>
                 </div>
             </article>
             <article class="article transparent three">
-                <div class="article__wrap">
+                <div class="article__wrap three">
                     <h2 class="three">Your shop is where you are!</h2>
                     <p class="different">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                     <div class="line"></div>
