section 4 left block and general styles

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/98841fee3f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/generall%20styles%20and%20var.css">
     <link rel="stylesheet" href="css/header%20and%20section%201.css">
     <link rel="stylesheet" href="css/section%202.css">
     <link rel="stylesheet" href="css/section%203.css">
+    <link rel="stylesheet" href="css/section%204.css">
 
 </head>
 <body>
@@ -99,6 +101,50 @@
     </section>
 
     <!-- SECTION 4-->
+    <section class="section__4">
+        <h2 class="section__4__title">Pricing</h2>
+        <div class="section__4__container">
+            <div class="pricing__block small left">
+                <h3 class="pricing__block__title">Basic</h3>
+                <h2 class="pricing__block__number">$0</h2>
+                <span>&nbsp;</span>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;100 MB HDD</p>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;1 Subdomain</p>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;2 E-mails</p>
+                <p><i class="fa-regular fa-rectangle-xmark"></i>&nbsp;&nbsp;Two years license</p>
+                <p><i class="fa-regular fa-rectangle-xmark"></i>&nbsp;&nbsp;Full support</p>
+                <a href="" class="pricing__button">Begin</a>
+            </div>
+            <div class="pricing__block central">
+                <h3 class="pricing__block__title">Professional</h3>
+                <h2 class="pricing__block__number">$25</h2>
+                <span>Limited offer</span>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;500 MB HDD</p>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;2 Subdomain</p>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;5 E-mails</p>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;One year license</p>
+                <p><i class="fa-regular fa-rectangle-xmark"></i>&nbsp;&nbsp;Full support</p>
+                <a href="" class="pricing__button central">Begin</a>
+            </div>
+            <div class="pricing__block small right">
+                <h3 class="pricing__block__title">Premium</h3>
+                <h2 class="pricing__block__number">$60</h2>
+                <span>Limited offer</span>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;2 GB HDD</p>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;5 Subdomain</p>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;20 E-mails</p>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;Two years license</p>
+                <p><i class="fa-regular fa-square-check"></i>&nbsp;&nbsp;Full support</p>
+                <a href="" class="pricing__button">Begin</a>
+            </div>
+        </div>
 
+    </section>
 </body>
 </html>
+
+<!--
+<i class="fa-regular fa-square-check"></i>-->
+
+<!--
+<i class="fa-regular fa-rectangle-xmark"></i>-->
